--- a/report/old.tex
+++ b/report/old.tex
@@ -54,3 +54,17 @@
 
 
 
+
+
+%%%%% Question 2
+ Multiplying everything by $\Delta t$ and noticing that $r \normsq{u^{j+1}} \geq 0$ gives
+    \begin{align*}
+        &\intSlong{(u^{j+1} - u^j)  u^{j+1}} +\Delta t \sigmafrac \seminormsq{u^{j+1}} + \Delta t (\sigma^2 - r) \intS{S u^{j+1} \dS{(u^{j+1})}} \leq 0.
+        \end{align*}
+    Using the properties of the absolute value this can be further bounded by below leaving us with
+    \begin{equation*}
+        \intSlong{(u^{j+1} - u^j)  u^{j+1}} +\Delta t \sigmafrac \seminormsq{u^{j+1}} - \Delta t \left|(\sigma^2 - r) \intS{S u^{j+1} \dS{(u^{j+1})}} \right| \leq 0
+    \end{equation*}
+
+
+
